--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     width:100vw;
     height:100vh;
     background-color: #000;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
@@ -26,6 +27,7 @@ body{
 }
 
 .logo{
+    font-family: 'Kaushan Script', cursive;
     background-color: rgb(245, 3, 3);
     display: flex;
     flex-direction: column;
@@ -55,6 +57,7 @@ body{
 }
 
 .navigation li{
+    font-family: 'Kaushan Script', cursive;
     list-style: none;
 }
 
@@ -101,6 +104,7 @@ body{
 }
 
 .hero-text h1{
+    font-family: 'STIX Two Text', serif;
     font-size: 3rem;
     margin:1rem 0;
 }
