--- a/style.css
+++ b/style.css
@@ -287,3 +287,81 @@ textarea{
     max-width: 25%;
     padding: 0 4px;
   }
+
+@media screen and (max-width: 320px) {
+    .container{
+        margin:0;
+        height: 100vh;
+        padding: 0 1rem;
+    }
+    .hero{
+        padding:0;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+    }
+    .hero img{
+        display: none;
+    }
+
+    .home{
+        background-image: url(./img/Backgrounds/heroBackground.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+
+    .photo-group{
+        display: none;
+    }
+
+    .hero-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .hero-text h1{
+        margin-top:1rem;
+        font-size: 2rem;
+    }
+
+    .logo{
+        width:25%;
+        
+    }
+
+    .logo p{
+        font-size: 0.5rem;
+    }
+
+    .hero-text h2{
+        font-size: 1rem;
+    }
+    
+    .navigation ul{
+        width:100%;
+        position:absolute;
+        bottom:10%;
+        left:50%;
+        transform:translateX(-50%);
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navigation a{
+        display:inline-block;
+        font-size: 0.6rem;
+    }
+
+    .navigation li{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.7rem;
+    }
+}
