--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body{
 .hero-text .services-list{
     height:60vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -342,7 +342,7 @@ textarea{
     
     .navigation ul{
         width:100%;
-        position:absolute;
+        position:fixed;
         bottom:10%;
         left:50%;
         transform:translateX(-50%);
@@ -363,5 +363,64 @@ textarea{
         justify-content: center;
         align-items: center;
         font-size: 0.7rem;
+    }
+
+    .hero-text p{
+        font-size: 0.8rem;
+    }
+
+    .hero-text img{
+        width:25%;
+    }
+
+    .hero-text .services-list li{
+        font-size: 0.9rem;
+    }
+
+    .hero-text .services-list{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-height: 50vh;
+    }
+
+    .hero-text .services-list ul{
+        margin:0;
+    }
+
+    .gallery{
+        padding:1rem 0;
+        max-height: 80vh;
+        grid-template-columns: 1fr 1fr;
+        gap:0.1rem;
+    }
+
+    .gallery .gallery-element{
+        width:80%;
+        height:80%;
+    }
+
+    .gallery .gallery-element p{
+        font-size: 0.5rem;
+    }
+
+    .photo-gallery{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+    }
+    .column{
+        flex: 100%;
+        max-width: 100%;
+    }
+
+    .my-form h2{
+        margin-bottom: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-height: 80vh;
     }
 }
