--- a/style.css
+++ b/style.css
@@ -1,899 +1,110 @@
 *{
-    padding:0;
     margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
 body{
-    width:100vw;
-    height:100vh;
-    background-color: #000;
-    font-family: 'Poppins', sans-serif;
+    background: #000;
+    color:#fff;
 }
 
 .container{
+    padding-top:0;
+    max-width:1440px;
+    height:100vh;
+    margin: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+a{
     
-    height: 100vh;
-    max-width: 1200px;
+    text-decoration: none;
     color:#fff;
-    margin:0 auto;
-    padding:0 2rem;
+    transition: 0.5s ease all;
+}
+
+img{
+    width:100%;
 }
 
 .header{
+    width:100%;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .logo{
-    font-family: 'Kaushan Script', cursive;
-    background-color: rgb(245, 3, 3);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    max-width: 12rem;
-    padding:1rem 0.5rem;
-    text-decoration: none;
-}
-
-.logo a{
-    text-decoration: none;
-    color:#fff;
-}
-
-.logo p{
-    font-size: 1.5rem;
-    line-height: 1.2;
-    
-    color:#fff;
-}
-
-.navigation ul{
-    z-index: 5;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.navigation li{
-    font-family: 'Kaushan Script', cursive;
-    list-style: none;
-}
-
-.navigation a{
-    display:block;
-    text-decoration: none;
-    color:#fff;
-    padding:0.2rem 1rem;
-    margin:0 1rem;
-    transition:0.5s ease all;
-}
-
-.active {
-    color:rgb(245, 3, 3);
-    border-bottom: 1px solid rgb(245, 3, 3);
-}
-
-.navigation a:hover{
-    color:rgb(245, 3, 3);
-    border-bottom: 1px solid rgb(245, 3, 3);
-}
-
-.hero{
-    position: relative;
-    margin-top:3rem;
-    display:grid;
-    grid-template-columns: 2fr 1fr;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
-    max-height: 70vh;
-}
-
-.hero img{
-    max-width:100%;
-}
-
-.hero-text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    text-align: left;
-}
-
-.hero-text h1{
-    font-family: 'STIX Two Text', serif;
-    font-size: 3rem;
-    margin:1rem 0;
-}
-
-.hero-text h2{
-    font-size:1.5rem;
-    font-weight: 100;
-}
-
-.hero-text a{
-    text-decoration: none;
-    color:#fff;
-    background-color: rgb(245, 3, 3);
-    padding:0.5rem 2rem;
-    margin:2rem 0;
-    transition: 0.5s ease all;
-}
-
-.hero-text a:hover{
-    background-color: rgb(133, 4, 4);
-}
-
-.hero-text img{
-    width:20%;
-    margin-bottom: 2rem;
-}
-
-.hero-text p{
-    font-size: 1.2rem;
-}
-
-.hero-text .services-list{
-    height:60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-text ul{
-    margin:3rem;
-    font-size: 1.5rem;
-}
-
-.photo-group{
     position: absolute;
-    display: flex;
-    width:5rem;
-    justify-content: center;
-    align-items: center;
-    bottom: 0;
-    right:25%;
-}
-
-
-.photo-group img{
-    width:100%;
-    margin:2rem;
-}
-.my-form{
+    top:0;
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: left;
-    margin:1rem auto;
-}
-
-.my-form h2{
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
-
-input{
-    width:100%;
-    margin-bottom: 1.5rem;
-}
-
-textarea{
-    margin-bottom: 1.5rem;
-}
-
-.btn{
-    display: inline-block;
-    background-color: rgb(245, 3, 3);
-    color:#fff;
-    border:none;
-    padding:0.5rem 2rem;
-    max-width: 50%;
-    text-decoration: none;
-    margin-bottom:1rem;
-    margin-left:5rem;
-}
-
-.social{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-}
-
-.social a{
-    
+    text-align: left;
+    background-color: rgb(241, 13, 13);
+    padding:1.5rem 1rem;
     font-size: 1.5rem;
-    color: #fff;
-    padding: 0;
-    background: transparent;
-    margin:1.5rem;
+}
+.top-nav, .hero img{
+    display: none;
 }
 
-.social a:hover{
-    background: transparent;
-    color:rgb(245, 3, 3);
-}
-
-.gallery{
-    width:100%;
-    height:100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 2rem;
-    justify-content: center;
-    align-items: center;
-    margin:0 auto;
-    padding: 2rem;
-}
-
-.gallery-element{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    width:15rem;
-    height:10rem;
-    background-image: url(./img/Business/IMG-20210517-WA0000.jpg);
+.hero{
+    height:80vh;
     background-size: cover;
     background-position: center;
-    text-decoration: none;
-    color:#fff;
 }
 
-.gallery-element p{
-    font-size: 1.5rem;
-    width: 100%;
-    background-color: rgba(0,0,0,0.6);
-    text-align: center;
-}
-
-.gallery-element a{
-    text-decoration: none;
-    color:#fff;
-}
-
-.gallery-element:nth-child(2){
-    background-image: url(./img/Baby_showers/IMG_5093.jpg);
-}
-
-.gallery-element:nth-child(3){
-    background-image: url(./img/Birthdays/IMG_1510.jpg);
-}
-
-.gallery-element:nth-child(4){
-    background-image: url(./img/Candid_shots/IMG_3460-2.jpg);
-}
-
-.gallery-element:nth-child(5){
-    background-image: url(./img/Cityscapes/117327110_120482686420068_9105612541632852538_o.jpg);
-}
-
-.gallery-element:nth-child(6){
-    background-image: url(./img/David/received_295773771645472.jpg);
-}
-
-.gallery-element:nth-child(7){
-    background-image: url(./img/Indoors_fun_sessions/20200820_094643.jpg);
-}
-
-.gallery-element:nth-child(8){
-    background-image: url(./img/Landscapes_Seascapes/20160321_113914.jpg);
-}
-
-.gallery-element:nth-child(9){
-    background-image: url(./img/Wildlife/IMG_3454.jpg);
-}
-
-.photo-gallery{
-    width:90vw;
-    margin:2rem auto;
+.hero-text{
+    height:80vh;
     display: flex;
-    flex-wrap: wrap;
-   justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+
+.hero-text h1{
+    font-size: 3rem;
+    margin:1rem 0 2rem 0;
+}
+
+.hero-text h2{
+    font-size: 2rem;
+    font-weight: 100;
+    margin:1rem 0;
+}
+
+.portfolio-btn{
+    max-width: 50%;
+    background-color: rgb(241, 13, 13);
+    padding:0.5rem 1.5rem;
+    font-size: 1.5rem;
+    margin:1rem 0;
+}
+
+.footer{
+    height: 10vh;
+}
+
+.footer-nav ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li{
+    list-style: none;
+    margin:2rem ;
+    font-size: 1rem;
     
 }
 
-.photo-gallery img{
-    width:100%;
-    vertical-align: middle;
-    margin-top:0.5rem;
+.footer-nav a:hover{
+    color: rgb(241, 13, 13);
 }
-
-.column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-
-@media screen and (max-width: 320px) {
-    .container{
-        margin:0;
-        height: 100vh;
-        padding: 0 1rem;
-    }
-    .hero{
-        padding:0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        text-align: center;
-    }
-    .hero img{
-        display: none;
-    }
-
-    .home{
-        background-image: url(./img/Backgrounds/heroBackground.jpg);
-        background-position: center;
-        background-size: cover;
-    }
-
-    .photo-group{
-        display: none;
-    }
-
-    .hero-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .hero-text h1{
-        margin-top:1rem;
-        font-size: 2rem;
-    }
-
-    .logo{
-        width:25%;
-        
-    }
-
-    .logo p{
-        font-size: 0.5rem;
-    }
-
-    .hero-text h2{
-        font-size: 1rem;
-    }
-    
-    .navigation ul{
-        width:100%;
-        position:fixed;
-        bottom:5%;
-        left:50%;
-        transform:translateX(-50%);
-        font-size: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .navigation a{
-        display:inline-block;
-        font-size: 0.6rem;
-    }
-
-    .navigation li{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.7rem;
-    }
-
-    .hero-text p{
-        font-size: 0.8rem;
-    }
-
-    .hero-text img{
-        width:25%;
-    }
-
-    .hero-text .services-list li{
-        font-size: 0.9rem;
-    }
-
-    .hero-text .services-list{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 50vh;
-    }
-
-    .hero-text .services-list ul{
-        margin:0;
-    }
-
-    .gallery{
-        padding:1rem 0;
-        max-height: 80vh;
-        grid-template-columns: 1fr 1fr;
-        gap:0.1rem;
-    }
-
-    .gallery .gallery-element{
-        width:80%;
-        height:80%;
-    }
-
-    .gallery .gallery-element p{
-        font-size: 0.5rem;
-    }
-
-    .photo-gallery{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 100vw;
-    }
-    .column{
-        flex: 100%;
-        max-width: 100%;
-    }
-
-    .my-form h2{
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 80vh;
-    }
-
-    .social{
-        
-        bottom:50px;
-        left:-25px;
-    }
-
-    .btn{
-        margin-top:0;
-    }
-}
-
-@media screen and (max-width: 375px){
-    .container{
-        margin:0;
-        height: 100vh;
-        padding: 0 1rem;
-    }
-    .hero{
-        padding:0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        text-align: center;
-    }
-    .hero img{
-        display: none;
-    }
-
-    .home{
-        background-image: url(./img/Backgrounds/heroBackground.jpg);
-        background-position: center;
-        background-size: cover;
-    }
-
-    .photo-group{
-        display: none;
-    }
-
-    .hero-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .hero-text h1{
-        margin-top:1rem;
-        font-size: 2rem;
-    }
-
-   a.logo {
-        width:100%;
-        
-    }
-
-    .logo p{
-        font-size: 1rem;
-    }
-
-    .hero-text h2{
-        font-size: 1rem;
-    }
-    
-    .navigation ul{
-        width:100%;
-        position:fixed;
-        bottom:5%;
-        left:50%;
-        transform:translateX(-50%);
-        font-size: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .navigation a{
-        display:inline-block;
-        font-size: 0.6rem;
-    }
-
-    .navigation li{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.7rem;
-    }
-
-    .hero-text p{
-        font-size: 0.8rem;
-    }
-
-    .hero-text img{
-        width:25%;
-    }
-
-    .hero-text .services-list li{
-        font-size: 0.9rem;
-    }
-
-    .hero-text .services-list{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 50vh;
-    }
-
-    .hero-text .services-list ul{
-        margin:0;
-    }
-
-    .gallery{
-        padding:1rem 0;
-        max-height: 80vh;
-        grid-template-columns: 1fr 1fr;
-        gap:0.1rem;
-    }
-
-    .gallery .gallery-element{
-        width:80%;
-        height:80%;
-    }
-
-    .gallery .gallery-element p{
-        font-size: 0.5rem;
-    }
-
-    .photo-gallery{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 100vw;
-    }
-    .column{
-        flex: 100%;
-        max-width: 100%;
-    }
-
-    .my-form h2{
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 80vh;
-    }
-
-    .social{
-        
-        bottom:50px;
-        left:-25px;
-    }
-
-    .btn{
-        margin-top:0;
-    }
-}
-
-@media screen and (max-width: 425px){
-    .container{
-        margin:0;
-        height: 100vh;
-        padding: 0 1rem;
-    }
-    .hero{
-        padding:0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        text-align: center;
-    }
-    .hero img{
-        display: none;
-    }
-
-    .home{
-        background-image: url(./img/Backgrounds/heroBackground.jpg);
-        background-position: center;
-        background-size: cover;
-    }
-
-    .photo-group{
-        display: none;
-    }
-
-    .hero-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .hero-text h1{
-        margin-top:1rem;
-        font-size: 2rem;
-    }
-
-    .logo{
-        width:25%;
-        
-    }
-
-    .logo p{
-        font-size: 0.5rem;
-    }
-
-    .hero-text h2{
-        font-size: 1rem;
-    }
-    
-    .navigation ul{
-        width:100%;
-        position:fixed;
-        bottom:5%;
-        left:50%;
-        transform:translateX(-50%);
-        font-size: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .navigation a{
-        display:inline-block;
-        font-size: 0.6rem;
-    }
-
-    .navigation li{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.7rem;
-    }
-
-    .hero-text p{
-        font-size: 0.8rem;
-    }
-
-    .hero-text img{
-        width:25%;
-    }
-
-    .hero-text .services-list li{
-        font-size: 0.9rem;
-    }
-
-    .hero-text .services-list{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 50vh;
-    }
-
-    .hero-text .services-list ul{
-        margin:0;
-    }
-
-    .gallery{
-        padding:1rem 0;
-        max-height: 80vh;
-        grid-template-columns: 1fr 1fr;
-        gap:0.1rem;
-    }
-
-    .gallery .gallery-element{
-        width:80%;
-        height:80%;
-    }
-
-    .gallery .gallery-element p{
-        font-size: 0.5rem;
-    }
-
-    .photo-gallery{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 100vw;
-    }
-    .column{
-        flex: 100%;
-        max-width: 100%;
-    }
-
-    .my-form h2{
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 80vh;
-    }
-
-    .social{
-        
-        bottom:50px;
-        left:-25px;
-    }
-
-    .btn{
-        margin-top:0;
-    }
-}
-
-@media screen and (max-width: 768px){
-    .container{
-        margin:0;
-        height: 100vh;
-        padding: 0 1rem;
-    }
-    .hero{
-        padding:0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        text-align: center;
-    }
-    .hero img{
-        display: none;
-    }
-
-    .home{
-        background-image: url(./img/Backgrounds/heroBackground.jpg);
-        background-position: center;
-        background-size: cover;
-    }
-
-    .photo-group{
-        display: none;
-    }
-
-    .hero-text{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .hero-text h1{
-        margin-top:1rem;
-        font-size: 3rem;
-    }
-
-    .logo{
-        width:20%;
-        
-    }
-
-    .logo p{
-        font-size: 1rem;
-    }
-
-    input .btn{
-        margin:0;
-    }
-
-    .hero-text h2{
-        font-size: 1rem;
-    }
-    
- 
-
-    .hero-text p{
-        font-size: 0.8rem;
-    }
-
-    .hero-text img{
-        width:25%;
-    }
-
-    .hero-text .services-list li{
-        font-size: 0.9rem;
-    }
-
-    .hero-text .services-list{
-        width: 100vw;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        max-height: 50vh;
-    }
-
-    .hero-text .services-list ul{
-        margin:0;
-    }
-
-    .gallery{
-        padding:1rem 0;
-        max-height: 80vh;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap:0.1rem;
-    }
-
-    .gallery .gallery-element{
-        width:100%;
-        height:100%;
-    }
-
-    .gallery .gallery-element p{
-        font-size: 0.5rem;
-    }
-
-    .photo-gallery{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 100vw;
-    }
-    .column{
-        flex: 75%;
-        max-width: 75%;
-    }
-
-    .my-form h2{
-        margin-bottom: 1rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-height: 80vh;
-    }
-
-    .social{
-        
-        bottom:50px;
-        left:-25px;
-    }
-
-    .btn{
-        margin-top:0;
-    }
-}
-
-@media screen and (max-width:1024px) {
-    .hero-text h1{
-        font-size: 2rem;
-    }
-
-    .photo-group{
-        width:3rem;
-    }
-
-    .services-list li{
-        font-size: 1rem;
-    }
-
-    .gallery{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
