--- a/style.css
+++ b/style.css
@@ -68,11 +68,12 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: left;
+    padding:1rem;
 }
 
 .hero-text h1{
-    font-size: 3rem;
-    margin:1rem 0 2rem 0;
+    font-size: 2.5rem;
+    margin:2rem 0 2rem 0;
 }
 
 .hero-text h2{
