--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ img{
     background-color: rgb(241, 13, 13);
     padding:0.5rem 1.5rem;
     font-size: 1rem;
-    margin:1rem 0;
+    margin-top:1rem;
 }
 
 .footer{
