--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ img{
 .hero-text h2{
     font-size: 1rem;
     font-weight: 100;
-    margin:1rem 0;
+    margin-bottom:1rem;
 }
 
 .portfolio-btn{
