--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ img{
 }
 
 .hero-text{
+    transform: translateY(5rem);
     height:70vh;
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
