--- a/style.css
+++ b/style.css
@@ -13,13 +13,18 @@ body{
 .container{
     padding-top:0;
     max-width:1440px;
-    height:100vh;
-    margin: 0 1rem;
+    margin: 0 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+.active{
+    color:rgb(241, 13, 13);
+}
+
+
 
 a{
     
@@ -34,7 +39,7 @@ img{
 
 .header{
     width:100%;
-    height: 10vh;
+    min-height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,22 +62,33 @@ img{
 }
 
 .hero{
-    
+    margin-top:2rem;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    position: relative;
+    z-index: 1;
 }
 
 .hero-text{
-    height:70vh;
+    min-height:70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    padding:1rem;
+    padding:0.5rem;
+    position:relative;
 }
-
+.hero-text::after{
+    content:'';
+    position: absolute;
+    background:#000;
+    inset: 0;
+    z-index: -1;
+    opacity: 0.75;
+}
 .hero-text h1{
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     margin:2rem 0 2rem 0;
 }
 
@@ -82,12 +98,21 @@ img{
     margin-bottom:1rem;
 }
 
-.portfolio-btn{
-    max-width: 50%;
+.portfolio-btn {
+    max-width: 40%;
+    display: inline-block;
     background-color: rgb(241, 13, 13);
-    padding:0.5rem 1.5rem;
+    padding:0.5rem 0.8rem;
+    font-size: 0.7rem;
+}
+
+.profile{
+    width:50%;
+    display: block;
+}
+
+.hero p{
     font-size: 1rem;
-    margin-top:1rem;
 }
 
 .footer{
@@ -109,4 +134,41 @@ li{
 
 .footer-nav a:hover{
     color: rgb(241, 13, 13);
+}
+
+.hero-text li{
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.my-form{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+
+label{
+    margin-top: 1rem;
+}
+
+textarea{
+    margin-top: 1rem;
+}
+
+.submit-btn{
+    max-width: 40%;
+    display: inline-block;
+    background-color: rgb(241, 13, 13);
+    padding:0.5rem 0.8rem;
+    font-size: 0.7rem;
+    border: none;
+    color:#fff;
+    margin-top: 1rem;
+}
+.social-icons
+
+.social-icons a{
+
 }
