--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ img{
     background-color: rgb(241, 13, 13);
     padding:0.5rem 0.8rem;
     font-size: 0.7rem;
+    margin-top:0.5rem;
 }
 
 .profile{
@@ -167,8 +168,16 @@ textarea{
     color:#fff;
     margin-top: 1rem;
 }
-.social-icons
+.social-icons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom:0;
+    right:0;
+}
 
 .social-icons a{
-
+    font-size: 1.2rem;
+    margin:0.5rem;
 }
