--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ img{
     background-attachment: fixed;
     position: relative;
     z-index: 1;
+    margin-bottom: 3rem;
 }
 
 .hero-text{
@@ -105,6 +106,7 @@ img{
     padding:0.5rem 0.8rem;
     font-size: 0.7rem;
     margin-top:0.5rem;
+    margin-bottom: 6rem;
 }
 
 .profile{
@@ -118,24 +120,28 @@ img{
 }
 
 .footer{
-    height: 10vh;
+    z-index: 3;
+    bottom: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
 }
 
 .footer-nav ul{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 li{
     list-style: none;
     margin:1rem ;
-    font-size: 0.8rem;
+    font-size: 1rem;
     
 }
 
 li i{
-    margin:0.5rem;
+    margin:0.2rem;
 }
 
 .footer-nav a:hover{
@@ -147,10 +153,11 @@ li i{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 0.8rem;
 }
 
 .hero-text li{
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -226,6 +233,7 @@ textarea{
     flex-wrap: wrap;
     margin-top: 2rem;
     text-align: left;
+    margin-bottom:2rem;
 }
 
 .column {
@@ -237,4 +245,19 @@ textarea{
     margin-top: 0.5rem;
     vertical-align: middle;
     width: 100%;
+  }
+
+  @media screen and (min-width:375px){
+      .hero h1{
+          font-size:3rem;
+      }
+
+      .hero h2{
+          font-size:1.5rem;
+          line-height: 1.2;
+      }
+
+      .portfolio-btn {
+          width:20rem;
+      }
   }
