--- a/style.css
+++ b/style.css
@@ -101,12 +101,15 @@ img{
 
 .portfolio-btn {
     max-width: 40%;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(241, 13, 13);
     padding:0.5rem 0.8rem;
     font-size: 0.7rem;
     margin-top:0.5rem;
     margin-bottom: 6rem;
+    text-align: center;
 }
 
 .profile{
@@ -258,6 +261,7 @@ textarea{
       }
 
       .portfolio-btn {
-          width:20rem;
+          width:100%;
+          text-align: center;
       }
   }
