--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ img{
     justify-content: left;
     align-items: left;
     text-align: left;
-    background: #870000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #190A05, #870000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #190A05, #870000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #F00000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     padding:1rem 1rem;
     font-size: 1rem;
 }
@@ -113,14 +113,15 @@ background: linear-gradient(to bottom, #190A05, #870000); /* W3C, IE 10+/ Edge, 
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #870000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #190A05, #870000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #190A05, #870000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #F00000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
     padding:0.5rem 0.8rem;
     font-size: 0.7rem;
     margin-top:1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 5rem;
     text-align: center;
 }
 
@@ -204,9 +205,12 @@ textarea{
 }
 
 .submit-btn{
-    max-width: 40%;
+    max-width: 50%;
     display: inline-block;
-    background-color: rgb(241, 13, 13);
+    background: #F00000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     padding:0.5rem 0.8rem;
     font-size: 0.7rem;
     border: none;
@@ -225,9 +229,16 @@ textarea{
 .social-icons a{
     font-size: 1.2rem;
     margin:0.5rem;
+    transition: 0.5s ease all;
+}
+
+.social-icons a:hover{
+    color:rgb(241, 13, 13);
 }
 
 .gallery{
+    max-width: 800px;
+    gap:0.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
