--- a/style.css
+++ b/style.css
@@ -299,3 +299,26 @@ textarea{
           text-align: center;
       }
   }
+
+  @media screen and (min-width:425px){
+      .footer-nav a{
+          font-size: 1rem;
+      }
+      .my-form{
+          width:25rem;
+      }
+
+      .portfolio-btn, .submit-btn{
+          width:30%;
+      }
+
+      .social-icons{
+          right:3rem;
+          bottom:2.5rem;
+          
+      }
+
+      .social-icons i{
+        font-size: 1.5rem;
+      }
+  }
