--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ img{
 }
 
 .logo{
+    z-index: 3;
     font-family: 'Dancing Script', cursive;
     font-weight: 500;
     position: absolute;
@@ -63,8 +64,13 @@ img{
     padding:1rem 1rem;
     font-size: 1rem;
 }
-.top-nav, .hero img{
+.top-nav, .hero-image{
     display: none;
+}
+
+.hero img{
+    width:10rem;
+    margin-bottom:1rem;
 }
 
 .hero{
@@ -123,6 +129,11 @@ background: linear-gradient(to right, #DC281E, #F00000); /* W3C, IE 10+/ Edge, F
     margin-top:1rem;
     margin-bottom: 5rem;
     text-align: center;
+    transition: 0.5s ease all;
+}
+
+.portfolio-btn:hover{
+   transform: translateY(-0.2rem);
 }
 
 .profile{
@@ -164,6 +175,7 @@ li i{
 
 .footer-nav a:hover{
     color: rgb(241, 13, 13);
+    transform: translateY(-0.2rem);
 }
 
 .footer-nav a{
@@ -198,14 +210,16 @@ label{
 
 input{
     width:100%;
+    border-radius: 5px;
 }
 
 textarea{
     margin-top: 1rem;
+    border-radius: 5px;
 }
 
 .submit-btn{
-    max-width: 50%;
+    max-width: 30%;
     display: inline-block;
     background: #F00000;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #DC281E, #F00000);  /* Chrome 10-25, Safari 5.1-6 */
@@ -238,6 +252,8 @@ textarea{
 
 .gallery{
     max-width: 800px;
+    min-height: 80vh;
+    margin-top: 2rem;
     gap:0.5rem;
     display: flex;
     flex-wrap: wrap;
@@ -254,6 +270,7 @@ textarea{
     align-items: flex-end;
     background-position: center;
     background-size: cover;
+    transition: 0.5s ease all;
 }
 
 .gallery-element p{
@@ -263,14 +280,17 @@ textarea{
     width:100%;
     text-align: center;
     padding:0.5rem 0;
+    transition: 0.5s ease all;
 }
 
 .photo-gallery{
     display: flex;
+    gap:0.5rem;
     flex-wrap: wrap;
     margin-top: 2rem;
-    text-align: left;
     margin-bottom:2rem;
+    align-items: center;
+    justify-content: center;
 }
 
 .column {
@@ -279,7 +299,7 @@ textarea{
   }
   
   .column img {
-    margin-top: 0.5rem;
+    margin: 0.5rem;
     vertical-align: middle;
     width: 100%;
   }
@@ -325,4 +345,127 @@ textarea{
       .social-icons i{
         font-size: 1.5rem;
       }
+  }
+
+  @media screen and (min-width:768px){
+      .hero-text{
+          padding:2rem;
+      }
+      .hero-text h1{
+          font-size: 4.5rem;
+          text-align:center;
+      }
+
+      .hero-text h2{
+          font-size: 2.25rem;
+          text-align: center;
+          margin-bottom: 4rem;
+      }
+
+      .portfolio-btn{
+          font-size: 1.5rem;
+      }
+
+      .column img{
+        width: 100%;
+      }
+        .my-form{
+            width:30rem;
+        }
+  }
+
+  @media screen and (min-width:1024px){
+      .footer{
+          display: none;
+      }
+
+      .top-nav{
+          display: flex;
+          position: absolute;
+          top:1.5rem;
+          right:3rem;
+      }
+
+      .top-nav ul{
+          display: flex;
+      }
+
+      .hero-image{
+          width:400px;
+          height: 350px;
+          display: flex;
+          background-position: center;
+          background-size: cover;
+      }
+
+      
+
+      .top-nav a:hover{
+        color: rgb(241, 13, 13);
+        
+    }
+
+      .hero{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-image: none !important;
+          margin:0;
+      }
+
+      .hero-text  {
+          padding-top: 5rem;
+          justify-content: center;
+          width:600px;
+      }
+
+      .hero-text h1{
+        font-size: 2.5rem;
+        text-align: left;
+      }
+
+      .hero-text h2{
+          font-size: 1.25rem;
+          text-align: left;
+      }
+
+      .portfolio-btn{
+          width:50%;
+          font-size: 1rem;
+      }
+
+      .logo{
+          left:3rem;
+      }
+      
+      .column {
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+      }
+
+      .portfolio-btn{
+          width: 50%;
+      }
+      
+      .services{
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-start;
+      }
+
+      .services li{
+          text-align: left;
+          list-style: square;
+      }
+
+      .gallery-element:hover p{
+        height:100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       
+      }
+
+     
   }
